# topic_analyzer

./: .gitattributes  .gitignore  README.md  main.py  requirements-dev.txt  requirements.txt  run-legacy.bat  run.bat  topic-analyzer-backend.spec
backend/: bridge.py  sidecar_entry.py
data/sentiment/: NOTICE.md
data/sentiment/zh/: negative.txt  positive.txt
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  routes.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/state/: workflowStore.ts
docs/: CLEANUP_REPORT.md  DIGITAL_HUMANITIES_ROADMAP.md  PROJECT_STRUCTURE.md
docs/dev-history/improve-gui-experience/: checklist.md  spec.md  task1-gui-boundary-audit.md  task2-tauri-python-boundary.md  tasks.md
gui/: main_window.py  styles.py
gui/pages/: clean_page.py  compare_page.py  export_page.py  import_page.py  lda_page.py  stm_page.py  welcome_page.py
gui/widgets/: nav_bar.py  status_bar.py
models/: app_state.py
scripts/: build-sidecar.ps1
services/: clean_service.py  compare_service.py  data_service.py  export_service.py  frequency_service.py  lda_service.py  ner_service.py  sentiment_service.py  stm_service.py
tests/: test_analysis_enhancements.py  test_bridge_parity.py  test_bridge_session.py  test_frequency_service.py  test_ner_service.py  test_robustness_fixes.py  test_sentiment_service.py
tests/fixtures/: v21_documents.csv  v21_invalid_language.csv
utils/: field_mapper.py  logger.py  mpl_font.py
