[package]
name = "topic-analyzer-desktop"
version = "0.1.0"
description = "Tauri desktop shell for historical newspaper topic analysis"
authors = ["Topic Analyzer"]
edition = "2021"

[lib]
name = "topic_analyzer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = { version = "0.15", default-features = false }
